--- a/loading-states/biomarker-xs.html
+++ b/loading-states/biomarker-xs.html
@@ -1,5 +1,5 @@
 <div
-	style="width: 100%; height: 100%; min-width: 136px; min-height: 168px; display: flex; justify-content: center; align-items: center;">
+	style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;">
 	<svg width="88" height="77" viewBox="0 0 88 77" fill="none" xmlns="http://www.w3.org/2000/svg">
 		<g>
 			<path d="M72.2843 72.2843C77.8784 66.6902 81.688 59.5629 83.2314 51.8036C84.7748 44.0444 83.9827 36.0017 80.9552 28.6927C77.9277 21.3836 72.8008 15.1365 66.2228 10.7412C59.6449 6.34596 51.9113 4 44 4C36.0888 4 28.3552 6.34596 21.7772 10.7412C15.1992 15.1365 10.0723 21.3836 7.04484 28.6927C4.01733 36.0017 3.2252 44.0444 4.76861 51.8036C6.31201 59.5629 10.1216 66.6902 15.7157 72.2843" stroke="url(#paint0_linear_361_18579)" style="" stroke-width="8" stroke-linecap="round"/>
