--- a/loading-states/biomarker.html
+++ b/loading-states/biomarker.html
@@ -1,5 +1,5 @@
 <div
-	style="width: 100%; height: 100%; min-width: 136px; min-height: 168px; display: flex; justify-content: center; align-items: center;">
+	style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;">
 	<svg width="352" height="352" viewbox="0 0 352 352" fill="none" xmlns="http://www.w3.org/2000/svg">
 		<g>
 			<path
