✨ main widget loading + error states

--- a/error-states/biomarker.html
+++ b/error-states/biomarker.html
@@ -2,7 +2,7 @@
 	<div style="width: 288px; height: 288px; padding: 32px; background: var(--surface-primary, white); overflow: hidden; border-radius: 16px; flex-direction: column; justify-content: flex-start; align-items: center; gap: 8px; display: inline-flex">
 		<div style="align-self: stretch; flex: 1 1 0; padding-top: 6px; padding-bottom: 6px; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 16px; display: flex">
 			<div style="align-self: stretch; padding-top: 8px; padding-bottom: 8px; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 16px; display: flex">
-				<div style="align-self: stretch; color: var(--surface-surface-error, #FF4667); font-size: 16px; font-family: Inter; font-weight: 700; line-height: 22.40px; word-wrap: break-word">Sorry, the data for this widget is not available at the moment.</div>
+				<div style="align-self: stretch; color: var(--surface-surface-error, #FF4667); font-size: 16px; font-weight: 700; line-height: 22.40px; word-wrap: break-word">Sorry, the data for this widget is not available at the moment.</div>
 			</div>
 			<div style="padding-top: 8px; padding-bottom: 8px; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 16px; display: flex">
 				<div style="width: 140px; height: 14px; background: var(--surface-surface-error-support, #FFEBEF)"></div>
