--- a/error-states/biomarker-xs.html
+++ b/error-states/biomarker-xs.html
@@ -1,5 +1,5 @@
 <div
 	style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;">
-	<p style="font-size: 14px; font-style: normal; font-weight: 400; line-height: 140%; color: red;">Sorry, the data for this widget is not available at the moment.</p>
+	<p style="font-size: 14px; font-style: normal; font-weight: 400; line-height: 140%; color: red; margin: 0 1rem;">Sorry, the data for this widget is not available at the moment.</p>
 </div>
 
