--- a/error-states/recommendations.html
+++ b/error-states/recommendations.html
@@ -1,6 +1,6 @@
 <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;">
-	<div style="min-width: 390px; min-height: 480px; max-width: 1300px; max-height: 670px; padding: 32px; background: var(--surface-primary, white); overflow: hidden; border-radius: 16px; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 32px; display: inline-flex">
-		<div data-show-buttons="true" data-show-intro-text.="false" style="align-self: stretch; justify-content: flex-start; align-items: center; gap: 10px; display: inline-flex">
+	<div style="min-width: 390px; min-height: 480px; max-width: 1300px; max-height: 670px; width: 100%; padding: 32px; background: var(--surface-primary, white); overflow: hidden; border-radius: 16px; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 32px; display: inline-flex">
+		<div style="align-self: stretch; justify-content: flex-start; align-items: center; gap: 10px; display: inline-flex">
 			<div style="flex: 1 1 0; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 8px; display: inline-flex">
 				<div style="align-self: stretch; color: var(--text-text-body, #092187); font-size: 24px; font-family: Poppins; font-weight: 600; line-height: 30px; word-wrap: break-word">Based on your health insights we recommend you: </div>
 			</div>
