--- a/error-states/main.html
+++ b/error-states/main.html
@@ -19,24 +19,26 @@
 			<path d="M265 96C280.464 96 293 108.536 293 124L293.365 125.496C295.047 132.256 302.376 160.341 312 177C322.288 194.81 345.19 216.851 348.178 219.692C348.212 219.712 348.247 219.731 348.282 219.751C361.674 227.483 366.263 244.608 358.531 258C350.851 271.302 333.907 275.916 320.555 268.402L320.5 268.5C320.401 268.47 286.99 258.5 265 258.5C242.977 258.5 209.5 268.5 209.5 268.5L209.443 268.402C196.092 275.916 179.149 271.301 171.47 258C163.738 244.608 168.326 227.483 181.719 219.751C181.752 219.732 181.786 219.713 181.82 219.693C184.801 216.859 207.709 194.813 218 177C227.624 160.341 234.953 132.256 236.635 125.496L237 124C237 108.536 249.536 96.0001 265 96Z" fill="#FFEBEF"/>
 		</svg>
 
-		<svg width="546" height="416" viewBox="0 0 546 416" fill="none" xmlns="http://www.w3.org/2000/svg">
-			<rect y="32" width="432" height="14" fill="url(#main_widget_linear_gradient_12)"/>
-			<rect y="62" width="386" height="14" fill="url(#main_widget_linear_gradient_12)"/>
-			<rect y="96" width="140" height="14" fill="url(#main_widget_linear_gradient_12)"/>
-			<rect y="154" width="482" height="8" fill="url(#main_widget_linear_gradient_12)"/>
-			<rect y="174" width="482" height="8" fill="url(#main_widget_linear_gradient_12)"/>
-			<rect y="194" width="482" height="8" fill="url(#main_widget_linear_gradient_12)"/>
-			<rect y="214" width="482" height="8" fill="url(#main_widget_linear_gradient_12)"/>
-			<rect y="234" width="482" height="8" fill="url(#main_widget_linear_gradient_12)"/>
-			<rect y="254" width="482" height="8" fill="url(#main_widget_linear_gradient_12)"/>
-			<rect y="274" width="286" height="8" fill="url(#main_widget_linear_gradient_12)"/>
-			<defs>
-				<linearGradient id="main_widget_linear_gradient_12" x1="0" y1="39" x2="432" y2="39" gradientUnits="userSpaceOnUse">
-					<stop stop-color="#FFEBEF"/>
-					<stop offset="1" stop-color="white"/>
-				</linearGradient>
-			</defs>
-		</svg>
+		<div>
+			<b style="color: red; font-family: Poppins, sans-serif; font-size: 16px; font-weight: 600;">Sorry, the data for this widget is not available at the moment.</b>
+			<p style="color: red; font-family: Inter, sans-serif; margin: 4px 0 8px 0; font-size: 16px; font-weight: 300;">Please contact the site administrator if the problem persists.</p>
+			<svg width="546" viewBox="0 86 546 416" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<rect y="96" width="140" height="14" fill="url(#main_widget_linear_gradient_12)"/>
+				<rect y="154" width="482" height="8" fill="url(#main_widget_linear_gradient_12)"/>
+				<rect y="174" width="482" height="8" fill="url(#main_widget_linear_gradient_12)"/>
+				<rect y="194" width="482" height="8" fill="url(#main_widget_linear_gradient_12)"/>
+				<rect y="214" width="482" height="8" fill="url(#main_widget_linear_gradient_12)"/>
+				<rect y="234" width="482" height="8" fill="url(#main_widget_linear_gradient_12)"/>
+				<rect y="254" width="482" height="8" fill="url(#main_widget_linear_gradient_12)"/>
+				<rect y="274" width="286" height="8" fill="url(#main_widget_linear_gradient_12)"/>
+				<defs>
+					<linearGradient id="main_widget_linear_gradient_12" x1="0" y1="39" x2="432" y2="39" gradientUnits="userSpaceOnUse">
+						<stop stop-color="#FFEBEF"/>
+						<stop offset="1" stop-color="white"/>
+					</linearGradient>
+				</defs>
+			</svg>
+		</div>
 
 	</div>
 </div>
