🐛 give unique ids to the pulse effects in loading states to limit collisions

--- a/loading-states/biomarker.html
+++ b/loading-states/biomarker.html
@@ -7,11 +7,11 @@
 				stroke="url(#pathPulseGradient)" style stroke-width="8" stroke-linecap="round"></path>
 
 			<g >
-				<rect x="64" y="162" width="140" height="14" fill="url(#linearPulseGradient)" style></rect>
-				<rect x="64" y="192" width="224" height="8" fill="url(#linearPulseGradient)" style></rect>
-				<rect x="64" y="211" width="224" height="8" fill="url(#linearPulseGradient)" style></rect>
-				<rect x="64" y="230" width="224" height="8" fill="url(#linearPulseGradient)" style></rect>
-				<rect x="64" y="249" width="139" height="8" fill="url(#linearPulseGradient)" style></rect>
+				<rect x="64" y="162" width="140" height="14" fill="url(#linearPulseGradientBiomarker)" style></rect>
+				<rect x="64" y="192" width="224" height="8" fill="url(#linearPulseGradientBiomarker)" style></rect>
+				<rect x="64" y="211" width="224" height="8" fill="url(#linearPulseGradientBiomarker)" style></rect>
+				<rect x="64" y="230" width="224" height="8" fill="url(#linearPulseGradientBiomarker)" style></rect>
+				<rect x="64" y="249" width="139" height="8" fill="url(#linearPulseGradientBiomarker)" style></rect>
 			</g>
 		</g>
 		<defs>
@@ -28,7 +28,7 @@
 				/>
 			</linearGradient>
 
-			<linearGradient id="linearPulseGradient" x1="0%" x2="110%" gradientUnits="userSpaceOnUse" gradientTransform="rotate(35)">
+			<linearGradient id="linearPulseGradientBiomarker" x1="0%" x2="110%" gradientUnits="userSpaceOnUse" gradientTransform="rotate(35)">
 				<stop stop-color="#E7EAEE33">
 					<animate attributeName="offset" values="0;1" dur="2s" repeatCount="indefinite" />
 				</stop>
