--- a/loading-states/metric.html
+++ b/loading-states/metric.html
@@ -5,19 +5,19 @@
 				<path
 					d="M32 36C32 27.1635 39.1634 20 48 20H304C312.837 20 320 27.1634 320 36V484C320 492.837 312.837 500 304 500H48C39.1635 500 32 492.837 32 484V36Z"
 					fill="white" style="fill:white;fill-opacity:1;" />
-				<rect x="64" y="60" width="224" height="14" fill="url(#linearPulseGradient)" style="" />
-				<rect x="64" y="98" width="140" height="14" fill="url(#linearPulseGradient)" style="" />
-				<rect x="64" y="136" width="224" height="8" fill="url(#linearPulseGradient)" style="" />
-				<rect x="64" y="156" width="224" height="8" fill="url(#linearPulseGradient)" style="" />
-				<rect x="64" y="176" width="224" height="8" fill="url(#linearPulseGradient)" style="" />
-				<rect x="64" y="196" width="224" height="8" fill="url(#linearPulseGradient)" style="" />
-				<rect x="64" y="216" width="224" height="8" fill="url(#linearPulseGradient)" style="" />
-				<rect x="64" y="236" width="224" height="8" fill="url(#linearPulseGradient)" style="" />
-				<rect x="64" y="256" width="137" height="8" fill="url(#linearPulseGradient)" style="" />
+				<rect x="64" y="60" width="224" height="14" fill="url(#linearPulseGradientMetric)" style="" />
+				<rect x="64" y="98" width="140" height="14" fill="url(#linearPulseGradientMetric)" style="" />
+				<rect x="64" y="136" width="224" height="8" fill="url(#linearPulseGradientMetric)" style="" />
+				<rect x="64" y="156" width="224" height="8" fill="url(#linearPulseGradientMetric)" style="" />
+				<rect x="64" y="176" width="224" height="8" fill="url(#linearPulseGradientMetric)" style="" />
+				<rect x="64" y="196" width="224" height="8" fill="url(#linearPulseGradientMetric)" style="" />
+				<rect x="64" y="216" width="224" height="8" fill="url(#linearPulseGradientMetric)" style="" />
+				<rect x="64" y="236" width="224" height="8" fill="url(#linearPulseGradientMetric)" style="" />
+				<rect x="64" y="256" width="137" height="8" fill="url(#linearPulseGradientMetric)" style="" />
 			</g>
 		</g>
 		<defs>
-			<linearGradient id="linearPulseGradient" x1="0%" x2="110%" gradientUnits="userSpaceOnUse" gradientTransform="rotate(35)">
+			<linearGradient id="linearPulseGradientMetric" x1="0%" x2="110%" gradientUnits="userSpaceOnUse" gradientTransform="rotate(35)">
 				<stop stop-color="#E7EAEE33">
 					<animate attributeName="offset" values="0;1" dur="2s" repeatCount="indefinite" />
 				</stop>
