--- a/loading-states/recommendations.html
+++ b/loading-states/recommendations.html
@@ -5,14 +5,14 @@
                 <path
                     d="M32 36C32 27.1634 39.1634 20 48 20H1264C1272.84 20 1280 27.1634 1280 36V412C1280 420.837 1272.84 428 1264 428H48C39.1634 428 32 420.837 32 412V36Z"
                     fill="white" style="fill:white;fill-opacity:1;" />
-                <rect x="64" y="56" width="535" height="24" fill="url(#linearPulseGradient)" style="" />
-                <rect x="64" y="116" width="400" height="280" rx="8" fill="url(#linearPulseGradient)" style="" />
-                <rect x="480" y="116" width="400" height="280" rx="8" fill="url(#linearPulseGradient)" style="" />
-                <rect x="896" y="116" width="400" height="280" rx="8" fill="url(#linearPulseGradient)" style="" />
+                <rect x="64" y="56" width="535" height="24" fill="url(#linearPulseGradientRecommendations)" style="" />
+                <rect x="64" y="116" width="400" height="280" rx="8" fill="url(#linearPulseGradientRecommendations)" style="" />
+                <rect x="480" y="116" width="400" height="280" rx="8" fill="url(#linearPulseGradientRecommendations)" style="" />
+                <rect x="896" y="116" width="400" height="280" rx="8" fill="url(#linearPulseGradientRecommendations)" style="" />
             </g>
         </g>
         <defs>
-			<linearGradient id="linearPulseGradient" x1="0%" x2="110%" gradientUnits="userSpaceOnUse" gradientTransform="rotate(35)">
+			<linearGradient id="linearPulseGradientRecommendations" x1="0%" x2="110%" gradientUnits="userSpaceOnUse" gradientTransform="rotate(35)">
 				<stop stop-color="#E7EAEE33">
 					<animate attributeName="offset" values="0;1" dur="2s" repeatCount="indefinite" />
 				</stop>
