--- a/loading-states/metric.html
+++ b/loading-states/metric.html
@@ -1,31 +1,29 @@
-<div style="width: 100%; height: 100%; min-width: 136px; min-height: 168px; display: flex; justify-content: center; align-items: center;">
-	<svg width="352" height="544" viewBox="0 0 352 544" fill="none" xmlns="http://www.w3.org/2000/svg">
+<div style="width: 100%; height: 100%; min-width: 288px; min-height: 480px; display: flex; justify-content: center; align-items: center;">
+	<svg fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="30 14 292 492">
 		<g filter="url(#filter0_d_130_19382)">
 			<g clip-path="url(#clip0_130_19382)">
-				<path
-					d="M32 36C32 27.1635 39.1634 20 48 20H304C312.837 20 320 27.1634 320 36V484C320 492.837 312.837 500 304 500H48C39.1635 500 32 492.837 32 484V36Z"
-					fill="white" style="fill:white;fill-opacity:1;" />
-				<rect x="64" y="60" width="224" height="14" fill="url(#linearPulseGradientMetric)" style="" />
-				<rect x="64" y="98" width="140" height="14" fill="url(#linearPulseGradientMetric)" style="" />
-				<rect x="64" y="136" width="224" height="8" fill="url(#linearPulseGradientMetric)" style="" />
-				<rect x="64" y="156" width="224" height="8" fill="url(#linearPulseGradientMetric)" style="" />
-				<rect x="64" y="176" width="224" height="8" fill="url(#linearPulseGradientMetric)" style="" />
-				<rect x="64" y="196" width="224" height="8" fill="url(#linearPulseGradientMetric)" style="" />
-				<rect x="64" y="216" width="224" height="8" fill="url(#linearPulseGradientMetric)" style="" />
-				<rect x="64" y="236" width="224" height="8" fill="url(#linearPulseGradientMetric)" style="" />
-				<rect x="64" y="256" width="137" height="8" fill="url(#linearPulseGradientMetric)" style="" />
+				<path d="M32 36C32 27.1635 39.1634 20 48 20H304C312.837 20 320 27.1634 320 36V484C320 492.837 312.837 500 304 500H48C39.1635 500 32 492.837 32 484V36Z" fill="white" style="fill:white;fill-opacity:1;"></path>
+				<rect x="64" y="60" width="224" height="14" fill="url(#linearPulseGradientMetric)" style=""></rect>
+				<rect x="64" y="98" width="140" height="14" fill="url(#linearPulseGradientMetric)" style=""></rect>
+				<rect x="64" y="136" width="224" height="8" fill="url(#linearPulseGradientMetric)" style=""></rect>
+				<rect x="64" y="156" width="224" height="8" fill="url(#linearPulseGradientMetric)" style=""></rect>
+				<rect x="64" y="176" width="224" height="8" fill="url(#linearPulseGradientMetric)" style=""></rect>
+				<rect x="64" y="196" width="224" height="8" fill="url(#linearPulseGradientMetric)" style=""></rect>
+				<rect x="64" y="216" width="224" height="8" fill="url(#linearPulseGradientMetric)" style=""></rect>
+				<rect x="64" y="236" width="224" height="8" fill="url(#linearPulseGradientMetric)" style=""></rect>
+				<rect x="64" y="256" width="137" height="8" fill="url(#linearPulseGradientMetric)" style=""></rect>
 			</g>
 		</g>
 		<defs>
 			<linearGradient id="linearPulseGradientMetric" x1="0%" x2="110%" gradientUnits="userSpaceOnUse" gradientTransform="rotate(35)">
 				<stop stop-color="#E7EAEE33">
-					<animate attributeName="offset" values="0;1" dur="2s" repeatCount="indefinite" />
+					<animate attributeName="offset" values="0;1" dur="2s" repeatCount="indefinite"></animate>
 				</stop>
 				<stop offset="0.3" stop-color="#EAEDF1">
-					<animate attributeName="offset" values="0.3;1.3" dur="2s" repeatCount="indefinite" />
+					<animate attributeName="offset" values="0.3;1.3" dur="2s" repeatCount="indefinite"></animate>
 				</stop>
 				<stop offset="0.9" stop-color="white">
-					<animate attributeName="offset" values="1;2" dur="2s" repeatCount="indefinite" />
+					<animate attributeName="offset" values="1;2" dur="2s" repeatCount="indefinite"></animate>
 				</stop>
 			</linearGradient>
 		</defs>
